labs/k8s/fil-rouge-troubleshoot/hard2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: expert-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: expert-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      volumes:
        - name: shared-html
          emptyDir: {}

      containers:
        - name: main-app
          image: nginx:1.21.6
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-html
              mountPath: /usr/share/nginx/html

        - name: config-loader-sidecar
          # On utilise une image kubectl pour simuler un client API
          image: alpine/k8s:1.35.6
          # Cette commande tente de lire le configmap et d'écrire son contenu
          # dans le volume partagé. Elle échouera en boucle à cause des permissions.
          command:
            - /bin/sh
            - -c
            - |
              echo "Attempting to fetch configuration...";
              while true; do
                kubectl get configmap app-html-config -n expert-ns -o jsonpath='{.data.index\.html}' > /mnt/html/index.html;
                if [ $? -eq 0 ]; then
                  echo "Configuration successfully written.";
                  sleep 3600; # On a réussi, on attend
                else
                  echo "Failed to fetch configmap. Retrying in 10 seconds...";
                  sleep 10;
                fi
              done
          volumeMounts:
            - name: shared-html
              mountPath: /mnt/html
---
