labs/k8s/fil-rouge-troubleshoot/hard5.yaml


apiVersion: v1
kind: Service
metadata:
  name: webhook-en-panne
  namespace: default
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    # Ce sélecteur ne correspond à AUCUN pod,
    # le service n'aura donc jamais d'Endpoints.
    app: service-webhook-inexistant
